--- a/client/views/index.html
+++ b/client/views/index.html
@@ -2,63 +2,149 @@
 <html ng-app="myApp">
 <head>
   <meta charset="utf-8">
-  <title>MEAN CRUD - BEERS</title>
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <title>Job Pocket</title>
+
   <link rel="stylesheet" href="/css/main.css">
 
 </head>
 
-<body ng-controller="beerController">
-{{2+1}}
-  <div class="container">
+<body ng-controller="myController">
 
-    <h1 class="text-center" ng-hide="edit">Add a Beer</h1>
-    <h1 class="text-center" ng-show="edit">Edit a Beer</h1>
-
-    <form>
-      <div class="form-group">
-        <input type="text" class="form-control" ng-model="beer.name" placeholder="Enter the beer name" required>
-      </div>
-      <div class="form-group">
-        <input type="text" class="form-control" ng-model="beer.type" placeholder="Enter the beer type" required>
-      </div>
-      <div class="form-group">
-        <input type="number" step="0.1" class="form-control" ng-model="beer.abv" placeholder="Enter the beer abv" required>
-      </div>
-      <button ng-hide="edit" ng-click="postBeer()" class="btn btn-primary btn-block">Submit</button>
-      <button ng-show="edit" ng-click="updateBeer()" class="btn btn-primary btn-block">Update</button>
-    </form>
-
-    <br><hr>
-
-    <div ng-show="messageSection">
-      <p class="alert alert-info" role="alert">{{ message }}</p>
-    </div>
-
-    <h2>All Beers</h2>
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Type</th>
-          <th>ABV</th>
-          <th colspan="3"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr ng-repeat="beer in beers">
-          <td>{{beer.name}}</td>
-          <td>{{beer.type}}</td>
-          <td>{{beer.abv}}</td>
-          <td class="text-right">
-            <button class="btn btn-primary" ng-click="editBeer(beer._id)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>
-            <button class="btn btn-danger" ng-click="deleteBeer(beer._id)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button>
-          </td>
-        </tr>
-      </tbody>
+<!--HEADER-->
+<div id="row1">
+    <table style="width:100%">
+      <tr>
+        <td style="width:10%">
+        <!--SEARCH-->
+            <search-input>
+                <img ng-src="{{searchIcon}}" alt="Search Icon" height="50" width="50"/>
+            </search-input>
+        <!--END SEARCH-->
+        </td>
+        <td style="width:80%">
+        <!--LOGO-->
+            <logo>
+                <h1>{{logo}}</h1>
+            </logo>
+        </td>
+        <!--END LOGO-->
+        <td style="width:10%">
+        <!--NAV BAR-->
+            <nav-bar>
+              <img ng-src="{{menuIcon}}" alt="Menu Icon" height="50" width="50"/>
+            </nav-bar>
+        <!--END NAV BAR-->
+        </td>
+      </tr>
     </table>
+</div>
+<!--END HEADER-->
 
-  </div>
+<!--ROW 2-->
+<div id="row2">
+    <table style="width:100%">
+      <tr>
+        <td style="width:50%"><h2><a href="myList.html">my list</a></h2></td>
+        <td style="width:50%"><h2><a href="recommendedList">recommended</a></h2></td>
+      </tr>
+    </table>
+</div>
+<!--END ROW 2-->
+
+
+<!-- MAIN BODY -->
+<div id="row3">
+    <!-- SEARCH PAGE -->
+    <div id="searchOptionContainer>"
+        <table style="width:100%">
+            <!--SEARCH OPTIONS PAGE-->
+            <search-options></search-options>
+            <!--END SEARCH OPTIONS PAGE-->
+        </table>
+    </div>
+    <!-- END SEARCH PAGE -->
+
+    <!--MY LIST PAGE-->
+    <div id="myListContainer">
+        <my-list>
+            <table style="width:100%">
+                  <tr>
+                      <td style="width:30%">
+                        <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%"/>
+                      </td>
+                      <td>
+                        {{fillerText}}
+                      </td>
+                  </tr>
+                  <tr>
+                      <td>
+                        <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%"/>
+                      </td>
+                      <td>{{fillerText}}</td>
+                  </tr>
+                  <tr>
+                      <td style="width:30%">
+                        <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%"/>
+                      </td>
+                      <td>
+                        {{fillerText}}
+                      </td>
+                  </tr>
+                  <tr>
+                      <td>
+                        <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%"/>
+                      </td>
+                      <td>{{fillerText}}</td>
+                  </tr>
+                  <tr>
+                      <td style="width:30%">
+                        <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%"/>
+                      </td>
+                      <td>
+                        {{fillerText}}
+                      </td>
+                  </tr>
+                  <tr>
+                      <td>
+                        <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%"/>
+                      </td>
+                      <td>{{fillerText}}</td>
+                  </tr>
+                  <tr>
+                      <td style="width:30%">
+                        <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%"/>
+                      </td>
+                      <td>
+                        {{fillerText}}
+                      </td>
+                  </tr>
+                  <tr>
+                      <td>
+                        <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%"/>
+                      </td>
+                      <td>{{fillerText}}</td>
+                  </tr>
+            </table>
+        </my-list>
+    </div>
+    <!--END MY LIST-->
+
+
+    <!--RECOMMENDATIONS PAGE-->
+    <div id="recommendationsContainer">
+        <recommendations>
+        </recommendations>
+    </div>
+    <!--END RECOMMENDATIONS PAGE-->
+</div>
+<!-- END MAIN BODY -->
+
+
+
+<!--FOOTER-->
+  <div id="footerContainer"></div>
+<!--END FOOTER-->
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
   <script src="../js/app.js" type="text/javascript"></script>
