--- a/client/views/index.html
+++ b/client/views/index.html
@@ -5,6 +5,7 @@
   <title>Job Pocket</title>
 
   <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
 </head>
 
@@ -67,14 +68,13 @@
 
     <!-- WELCOME PAGE -->
     <div id="welcomePage" ng-hide="true">
-        <welcome-page>
           <h1>welcome to job pocket!</h1>
-        </welcome-page>
+          <login></login>
     </div>
     <!-- END WELCOME PAGE -->
 
     <!-- SEARCH PAGE -->
-    <div id="searchOptionContainer" ng-hide="false">
+    <div id="searchOptionContainer" ng-hide="false ">
         <search-options>
 
         </search-options>
@@ -219,6 +219,8 @@
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="../js/app.js" type="text/javascript"></script>
   <script src="../js/controllers.js" type="text/javascript"></script>
   <script src="../js/directives.js" type="text/javascript"></script>
