--- a/client/css/main.css
+++ b/client/css/main.css
@@ -9,12 +9,12 @@ a {
   color: black;
 }
 
-a:link {
+a:visited {
   color: green;
 }
 
 a:hover {
-  color: blue;
+  color: green;
 }
 
 p {
@@ -23,7 +23,6 @@ p {
 
 h1 {
   text-align: center;
-  color: green;
 }
 
 h2 {
@@ -31,7 +30,26 @@ h2 {
 }
 
 td {
+  vertical-align: bottom;
   padding: 10px;
+}
+
+input {
+  border-radius: 10px;
+}
+
+ul {
+  list-style: none;
+}
+
+#logo {
+  color: green;
+}
+
+#myList {
+}
+
+#recommended {
 }
 
 #row1 {
@@ -54,6 +72,7 @@ td {
 
 #mainBody {
   margin-top: 150px;
+  padding: 30px;
 }
 
 #searchIcon:hover {
@@ -65,6 +84,24 @@ td {
   margin-left: 30px;
 }
 
+#searchBar {
+  position: fixed;
+  margin-top: -84px;
+  margin-left: 70px;
+  width: 80%;
+  z-index: 3;
+}
+
+#urlBar {
+  position: fixed;
+  margin-top: -40px;
+  width: 94%;
+  right: 3%;
+  left: 3%;
+  text-align: center;
+  z-index: 4;
+}
+
 #menuIcon {
   margin-right: 30px;
 }
@@ -74,6 +111,16 @@ td {
     transform: rotate(-90deg);
 }
 
+#menuDropDown {
+  position: fixed;
+  margin-top: 150px;
+  z-index: 6;
+}
+
+#addAvoid {
+  margin: 0;
+  padding: 0;
+}
 
 /*@media #row3 {
   position: absolute;
