--- a/client/views/lists.html
+++ b/client/views/lists.html
@@ -1,14 +1,17 @@
 <table style="width:100%">
       <tr>
         <td style="width:50%">
-            <a href="myList.html">
-              <h2>my list</h2>
+            <a href="myList">
+              <h2 id="myList">my list</h2>
             </a>
         </td>
         <td style="width:50%">
             <a href="recommendedList">
-              <h2>recommended</h2>
+              <h2 id="recommeded">recommended</h2>
             </a>
         </td>
+      </tr>
+      <tr>
+
       </tr>
 </table>
