added login page and scrapper tool along with storing url information

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,8 +1,14 @@
 body {
+    background: no-repeat fixed center center;
+    background-size: cover;
+    font-family: Montserrat;
+}
+/*
+body {
   background: white;
   margin: 10px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+}*/
 
 a {
   text-decoration: none !important;
