--- a/client/views/lists.html
+++ b/client/views/lists.html
@@ -1,17 +1,12 @@
 <table style="width:100%">
       <tr>
         <td style="width:50%">
-            <a href="myList">
-              <h2 id="myList">my list</h2>
-            </a>
+            <a href="/#/list"><h2 id="myList">my list</h2></a>
         </td>
         <td style="width:50%">
-            <a href="recommendedList">
+            <a href="/#/recommended">
               <h2 id="recommeded">recommended</h2>
             </a>
         </td>
-      </tr>
-      <tr>
-
       </tr>
 </table>
