--- a/client/views/myList.html
+++ b/client/views/myList.html
@@ -1,75 +1,102 @@
+<div>
+<!--ROW 2/ LISTS-->
+<div id="row2">
+  <lists></lists>
+</div>
+<!--END ROW 2/ LISTS-->
+
+<!--URL ADD INPUT-->
+<table style="width:100%" ng-controller="jobController">
+    <tr>
+        <td style="width:100%">
+            <searchBar>
+              <div id="urlBar">
+                <div class="input-group">
+                  <input type="text" class="form-control" placeholder="enter job posting url here" name="urlInput" id="urlInput" ng-model='url'>
+                  <span class="input-group-btn">
+                    <button class="btn btn-default" type="button" name="urlBtn" id="urlBtn" ng-click="getUrl()">ADD!</button>
+                  </span>
+                </div>
+              </div>
+            </searchBar>
+        </td>
+    </tr>
+</table>
+<!--END URL ADD INPUT-->
 
 <table style="width:100%">
-                  <tr>
-                      <td style="width:30%">
-                        <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%"/>
-                      </td>
-                      <td>
-                        <p><h3>First one</h3></p>
-                        {{fillerText}}
-                      </td>
-                  </tr>
-                  <tr>
-                      <td style="width:30%">
-                        <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%"/>
-                      </td>
-                      <td>
-                        <p><h3>{{headLine}}</h3></p>
-                        {{fillerText}}
-                      </td>
-                  </tr>
-                  <tr>
-                      <td style="width:30%">
-                        <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%"/>
-                      </td>
-                      <td>
-                        <p><h3>{{headLine}}</h3></p>
-                        {{fillerText}}
-                      </td>
-                  </tr>
-                  <tr>
-                      <td style="width:30%">
-                        <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%"/>
-                      </td>
-                      <td>
-                        <p><h3>{{headLine}}</h3></p>
-                        {{fillerText}}
-                      </td>
-                  </tr>
-                  <tr>
-                      <td style="width:30%">
-                        <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%"/>
-                      </td>
-                      <td>
-                        <p><h3>{{headLine}}</h3></p>
-                        {{fillerText}}
-                      </td>
-                  </tr>
-                  <tr>
-                      <td style="width:30%">
-                        <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%"/>
-                      </td>
-                      <td>
-                        <p><h3>{{headLine}}</h3></p>
-                        {{fillerText}}
-                      </td>
-                  </tr>
-                  <tr>
-                      <td style="width:30%">
-                        <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%"/>
-                      </td>
-                      <td>
-                        <p><h3>{{headLine}}</h3></p>
-                        {{fillerText}}
-                      </td>
-                  </tr>
-                  <tr>
-                      <td style="width:30%">
-                        <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%"/>
-                      </td>
-                      <td>
-                        <p><h3>{{headLine}}</h3></p>
-                        {{fillerText}}
-                      </td>
-                  </tr>
+    <tr>
+        <td style="width:30%">
+            <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%" />
+        </td>
+        <td>
+            <p><h3>First one</h3></p>
+            {{fillerText}}
+        </td>
+    </tr>
+    <tr>
+        <td style="width:30%">
+            <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%" />
+        </td>
+        <td>
+            <p><h3>{{headLine}}</h3></p>
+            {{fillerText}}
+        </td>
+    </tr>
+    <tr>
+        <td style="width:30%">
+            <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%" />
+        </td>
+        <td>
+            <p><h3>{{headLine}}</h3></p>
+            {{fillerText}}
+        </td>
+    </tr>
+    <tr>
+        <td style="width:30%">
+            <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%" />
+        </td>
+        <td>
+            <p><h3>{{headLine}}</h3></p>
+            {{fillerText}}
+        </td>
+    </tr>
+    <tr>
+        <td style="width:30%">
+            <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%" />
+        </td>
+        <td>
+            <p>
+                <h3>{{headLine}}</h3></p>
+            {{fillerText}}
+        </td>
+    </tr>
+    <tr>
+        <td style="width:30%">
+            <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%" />
+        </td>
+        <td>
+            <p><h3>{{headLine}}</h3></p>
+            {{fillerText}}
+        </td>
+    </tr>
+    <tr>
+        <td style="width:30%">
+            <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%" />
+        </td>
+        <td>
+            <p><h3>{{headLine}}</h3></p>
+            {{fillerText}}
+        </td>
+    </tr>
+    <tr>
+        <td style="width:30%">
+            <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%" />
+        </td>
+        <td>
+            <p><h3>{{headLine}}</h3></p>
+            {{fillerText}}
+        </td>
+    </tr>
 </table>
+</div>
