--- a/client/views/recommended.html
+++ b/client/views/recommended.html
@@ -1,13 +1,21 @@
+<div>
+<!--ROW 2/ LISTS-->
+<div id="row2">
+  <lists></lists>
+</div>
+<!--END ROW 2/ LISTS-->
+
 <table style="width:100%">
     <tr>
         <td>
             <p>
-                <h3>First Recommended one</h3>
-            </p>
-                {{fillerText}}
+            <h3>First Recommended one</h3></p>
+
+            {{fillerText}}
         </td>
         <td style="width:30%">
             <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%" />
         </td>
     </tr>
 </table>
+</div>
