--- a/client/views/header.html
+++ b/client/views/header.html
@@ -14,7 +14,7 @@
         <td style="width:80%">
         <!--LOGO-->
             <logo>
-                <a href="login">
+                <a href="/#/login">
                   <h1 id="logo">{{logo}}</h1>
                 </a>
             </logo>
