--- a/client/views/searchOptions.html
+++ b/client/views/searchOptions.html
@@ -8,17 +8,11 @@
         <td>
           <ul id="addAvoid">
             <li style="color:green" id="add">
-              <h6>
-                <span class="glyphicon glyphicon-plus"></span>
-                  ADD
-              </h6>
+                  <span class="glyphicon glyphicon-plus"  id="addBtn"></span>
             </li>
 
-            <li style="color:red" id="avoid">
-              <h6>
-                <span class="glyphicon glyphicon-minus"></span>
-                AVOID
-              </h6>
+            <li style="color:black" id="avoid">
+                <span class="glyphicon glyphicon-minus" id="avoidBtn"></span>
             </li>
           </ul>
         </td>
@@ -27,36 +21,37 @@
     <table>
       <tr>
         <td>
-          <ul style="color:green" id="addList">
+          <ul style="color:black" id="addList">
             <h4>Add List</h5>
               <h5>
                 <li>
-                  <span class="glyphicon glyphicon-plus"></span>
+                  <span class="glyphicon glyphicon-plus" id="addBtn"></span>
                   html
                   <span style="color:black" class="glyphicon glyphicon-remove"></span>
                 </li>
               </h5>
               <h5>
                 <li>
-                  <span class="glyphicon glyphicon-plus"></span>javascript
+                  <span class="glyphicon glyphicon-plus" id="addBtn"></span>
+                  javascript
                   <span style="color:black" class="glyphicon glyphicon-remove"></span>
                 </li>
               </h5>
           </ul>
         </td>
         <td>
-          <ul style="color:red" id="avoidList">
+          <ul style="color:black" id="avoidList">
             <h4>Avoid List</h4>
               <h5>
                 <li>
-                  <span class="glyphicon glyphicon-minus"></span>
+                  <span class="glyphicon glyphicon-minus" id="avoidBtn"></span>
                   salesforce
-                  <span style="color:black" class="glyphicon glyphicon-remove"></span>
+                  <span style="color:black" class="glyphicon glyphicon-remove deleteBtn"></span>
                 </li>
               </h5>
               <h5>
                 <li>
-                  <span class="glyphicon glyphicon-minus"></span>
+                  <span class="glyphicon glyphicon-minus" id="avoidBtn"></span>
                   ruby
                   <span style="color:black" class="glyphicon glyphicon-remove"></span>
                 </li>
