--- a/client/views/login.html
+++ b/client/views/login.html
@@ -1,4 +1,4 @@
-<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+<!-- <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 <div class="logo"></div>
 <h1>Welcome to Job Pocket</h1>
 <div class="login-block">
@@ -6,4 +6,23 @@
     <input type="text" value="" placeholder="Username" id="username" />
     <input type="password" value="" placeholder="Password" id="password" />
     <button>Submit</button>
+</div> -->
+
+
+<div class="col-md-4">
+  <h1>Login</h2>
+  <div ng-show="error" class="alert alert-danger"></div>
+  <form class="form" ng-submit="login()">
+    <div class="form-group">
+      <label>Username</label>
+      <input type="text" class="form-control" name="username" ng-model="loginForm.username" required>
+    </div>
+    <div class="form-group">
+      <label>Password</label>
+        <input type="password" class="form-control" name="password" ng-model="loginForm.password" required>
+      </div>
+      <div>
+        <button type="submit" class="btn btn-default" ng-disabled="disabled">Login</button>
+      </div>
+  </form>
 </div>
