--- a/client/views/myList.html
+++ b/client/views/myList.html
@@ -1,4 +1,4 @@
-<div>
+<div ng-controller="jobController">
 <!--ROW 2/ LISTS-->
 <div id="row2">
   <lists></lists>
@@ -6,7 +6,7 @@
 <!--END ROW 2/ LISTS-->
 
 <!--URL ADD INPUT-->
-<table style="width:100%" ng-controller="jobController">
+<table style="width:100%">
     <tr>
         <td style="width:100%">
             <searchBar>
@@ -25,78 +25,14 @@
 <!--END URL ADD INPUT-->
 
 <table style="width:100%">
-    <tr>
+    <tr ng-repeat="url in allUrls" class="url">
         <td style="width:30%">
             <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%" />
         </td>
         <td>
-            <p><h3>First one</h3></p>
-            {{fillerText}}
-        </td>
-    </tr>
-    <tr>
-        <td style="width:30%">
-            <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%" />
-        </td>
-        <td>
-            <p><h3>{{headLine}}</h3></p>
-            {{fillerText}}
-        </td>
-    </tr>
-    <tr>
-        <td style="width:30%">
-            <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%" />
-        </td>
-        <td>
-            <p><h3>{{headLine}}</h3></p>
-            {{fillerText}}
-        </td>
-    </tr>
-    <tr>
-        <td style="width:30%">
-            <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%" />
-        </td>
-        <td>
-            <p><h3>{{headLine}}</h3></p>
-            {{fillerText}}
-        </td>
-    </tr>
-    <tr>
-        <td style="width:30%">
-            <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%" />
-        </td>
-        <td>
-            <p>
-                <h3>{{headLine}}</h3></p>
-            {{fillerText}}
-        </td>
-    </tr>
-    <tr>
-        <td style="width:30%">
-            <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%" />
-        </td>
-        <td>
-            <p><h3>{{headLine}}</h3></p>
-            {{fillerText}}
-        </td>
-    </tr>
-    <tr>
-        <td style="width:30%">
-            <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%" />
-        </td>
-        <td>
-            <p><h3>{{headLine}}</h3></p>
-            {{fillerText}}
-        </td>
-    </tr>
-    <tr>
-        <td style="width:30%">
-            <img ng-src="{{urlImage}}" alt="Menu Icon" height="100%" width="100%" />
-        </td>
-        <td>
-            <p><h3>{{headLine}}</h3></p>
-            {{fillerText}}
+            <p><h3>{{url.headline}}</h3></p>
+            {{url}}
+            {{url.description}}
         </td>
     </tr>
 </table>
-</div>
